--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -163,7 +163,7 @@ CLSmith is biased towards identifying struct miscompilations, though only 7.1\% 
     \label{lst:intel-scalar-assertion}
   }\\%
   \caption{Kernels which trigger compiler assertions which both CLSmith and DeepSmith exposed.}%
-  \label{lst:compiler-crashes}%
+  \label{lst:clsmith-compiler-assertions}%
 \end{figure}
 
 In 48 hours of testing, DeepSmith triggered 9 distinct compiler assertions, CLSmith 2. Both of the assertions triggered by CLSmith were also triggered by CLgen.
