--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -17,7 +17,7 @@ The trained network is sampled to generate new programs. The model is seeded wit
   \includegraphics[width=.80\columnwidth]{img/deepsmith} %
   % \vspace{-2em}%
   \caption{%
-    Test-case generation. An corpus of programs from GitHub is used to seed a generative model for program codes, whose outputs are parameterized to construct test-cases.%
+    Test-case generation. An corpus of programs from GitHub is used to seed a generative model for program code, which are parameterized to construct test-cases.%
   }%
   \label{fig:deeptune}
 \end{figure}
